[package]
name = "zora-aomi-tools"
version = "0.1.0"
edition = "2021"
description = "Typed Rust tools for exposing Zora coin market data to agent runtimes."
license = "MIT"
default-run = "agent"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["aomi-plugin"]
aomi-plugin = ["dep:aomi-sdk", "dep:schemars"]

[dependencies]
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
aomi-sdk = { version = "=3.0.1", optional = true }
anyhow = "1"
async-trait = "0.1"
async-graphql = "7"
async-graphql-axum = "7"
chrono      = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
schemars = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
